Church text and logo fix

--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">
-                        Darshan<br />Church
+                        Nepal Darshan<br />Church
                     </h1>
 
                     <h2
                         class="submasthead text-white-70 mx-auto mt-5 mb-5"
                         style="line-height: 1.6rem"
                     >
-                        Jesus said to them,<br />'I am the light of the
+                        Je,<br />'I am the light of the
                         world.<br /><br />Anyone who follows Me will never walk
                         in darkness but will have the light of life.'
                         <br /><br />
@@ -208,7 +208,7 @@
                 <div class="mx-auto text-center">
                     <img
                         class="img-fluid mb-5"
-                        src="Images/"
+                        src="Images/NDClogo50*50.png"
                         alt="Darshan Logo"
                     />
                     <br /><br />
@@ -353,7 +353,7 @@
                     <img
                         class="img-fluid"
                         src="images/pastor.jpg"
-                        alt="Pastor Shyam Magarp"
+                        alt="Pastor Shyam Magar"
                         style="height: 300px; border-radius: 50%; margin: 1px"
                     /><br />
                     <br /><br />
@@ -365,9 +365,9 @@
                             class="text-white-90 mb-4"
                             style="font-size: 1.1rem"
                         >
-                            Darshan Church was founded in 1999 in <br />
-                            Chaudandgadhi, Udayapur <br />
-                            - Beltar, Nepal.
+                            Nepal Darshan Church was founded in 2008 in <br />
+                            Kathmandu , Bagmati <br />
+                            - Jortpati 7 , Kathmandu ,Nepal
                         </h3>
                         <p
                             class="text-white-90 mb-4"
