Work on th about pic and the logo.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <body id="page-top">
         <!-- help load background image faster -->
         <img
-            src="Church.jpg"
+            src="Images/Church.jpg"
             alt=""
             style="display: none"
         />
@@ -208,7 +208,7 @@
                 <div class="mx-auto text-center">
                     <img
                         class="img-fluid mb-5"
-                        src="Images/NDClogo50*50.png"
+                        src="Images/Church.jpg"
                         alt="Darshan Logo"
                     />
                     <br /><br />
@@ -224,14 +224,14 @@
                     <hr />
 
                     <!-- Youtube Video Carousel -->
-                    <h2
+                    <!-- <h2
                         class="text-white-90 mb-4 text-uppercase"
                         style="font-size: 2rem"
                     >
                         Newest Updates!
-                    </h2>
+                  </h2>  -->
 
-                    <!-- Carousel -->
+                    <!-- Carousel
                     <div
                         id="carouselExampleCaptions1"
                         class="carousel slide"
@@ -334,7 +334,7 @@
                             ></span>
                             <span class="visually-hidden">Next</span>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- End Carousel -->
                     <br /><br /><br />
@@ -346,13 +346,13 @@
 
                     <img
                         class="img-fluid"
-                        src="images/DarshanLogo.jpg"
+                        src="Images/Churchlogo300*300.jpg"
                         style="border-radius: 50%; margin: 1px"
                         alt="Darshan Logo"
                     />
                     <img
                         class="img-fluid"
-                        src="images/pastor.jpg"
+                        src="Images/Pastorimg.jpeg"
                         alt="Pastor Shyam Magar"
                         style="height: 300px; border-radius: 50%; margin: 1px"
                     /><br />
